fix sidebar menu spacing issue

--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ License URI:  https://www.gnu.org/licenses/gpl-3.0.html
         display: inline !important;
     }
     #nmped_subpages_widget-2 li.page_item_has_children ul.children{
-        padding-top: 5px;
+        /*padding-top: 5px;*/
         padding-left: 5px !important;
     }
 
@@ -556,7 +556,12 @@ License URI:  https://www.gnu.org/licenses/gpl-3.0.html
     #wrapper .side-nav-widget li a {
         padding-left: 25px;
     }
-    #wrapper .side-nav-widget li ul.children { padding-left:25px; }
+    #wrapper .side-nav-widget li ul.children { padding-left:25px; margin-left:20px; }
+    #wrapper .side-nav-widget li ul.children li { padding-left:0; }
+    #wrapper .side-nav-widget li.page_item_has_children { padding-top: 7px !important; padding-bottom: 3px !important; }
+    #wrapper .side-nav-widget li ul.children li.page_item { padding-left:0 !important; }
+    #wrapper .side-nav-widget li ul.children li.page_item_has_children { padding-left:15px !important; }
+    #wrapper .side-nav li a { padding:5px 0; }
     .sidebar li a:hover, .sidebar li a:focus { color: #e64900 !important; text-decoration: underline !important; }
     .uppercase { text-transform:uppercase; }
     .center { text-align:center; }
